feat: add language service
